--- a/css/style.css
+++ b/css/style.css
@@ -13,31 +13,32 @@ html {
   font-weight: 400;
 }
 @font-face {
-  font-family: "Cuprum-Italic";
-  src: url("../fonts/web/cuprumitalic.woff2") format(woff2), url("../fonts/web/cuprumitalic.woff") format(woff);
+  font-family: "Cuprum";
+  src: url("../fonts/web/cuprumitalic.woff2") format('woff2'), url("../fonts/web/cuprumitalic.woff") format('woff');
   font-style: italic;
   font-weight: 400;
 }
 @font-face {
-  font-family: "Cuprum-Bold";
+  font-family: "Cuprum";
   src: url("../fonts/web/cuprumbold.woff2") format('woff2'), url("../fonts/web/cuprumbold.woff") format('woff');
   font-style: normal;
   font-weight: 700;
 }
 @font-face {
-  font-family: "pt-sans-bold";
+  font-family: "PT-Sans";
   src: url("../fonts/web/ptsansbold.woff2") format('woff2'), url("../fonts/web/ptsansbold.woff") format('woff');
   font-style: normal;
   font-weight: 700;
 }
 @font-face {
-  font-family: "pt-sans";
+  font-family: "PT-Sans";
   src: url("../fonts/web/ptsans.woff2") format('woff2'), url("../fonts/web/ptsans.woff") format('woff');
   font-style: normal;
   font-weight: 400;
 }
 .page {
-  font: 14px "Cuprum";
+  font-family: "Cuprum", Arial, sans-serif;
+  font-size: 14px;
   line-height: 18px;
 }
 .page,
@@ -107,18 +108,19 @@ a {
   margin-left: 270px;
   width: 270px;
 }
+.search form {
+  height: 100%;
+}
 .search input {
+  height: inherit;
   width: 100%;
   background: inherit;
   color: #fff;
+  display: flex;
+  border: none;
 }
 .search:hover {
   background-color: #212a3a;
-}
-.search-icon {
-  background: url("../img/icon-search.svg");
-  width: 17px;
-  height: 17px;
 }
 .search-icon:hover {
   fill: #fff;
@@ -194,7 +196,9 @@ a {
 .slogan {
   width: 196px;
   color: #ee3643;
-  font: 16px "Cuprum-Italic";
+  font-size: 16px;
+  font-family: "Cuprum";
+  font-style: italic;
   line-height: 23px;
   margin: 8px 71px 0 44px;
 }
@@ -223,7 +227,8 @@ a {
   font-size: 21px;
 }
 .authorization {
-  font: 21px "Cuprum";
+  font-size: 21px;
+  font-family: "Cuprum";
   line-height: 21px;
   margin: 14px 0 0 69px;
 }
@@ -288,13 +293,16 @@ a {
   flex-grow: 1;
   text-align: center;
   list-style: none;
-  padding: 22px 30px;
 }
 .navigation-item:hover {
   background-color: #293449;
 }
 .navigation-item:active {
   background-color: #1d2739;
+}
+.navigation-link {
+  padding: 22px 30px;
+  display: inline-flex;
 }
 .categories {
   margin-top: 59px;
@@ -312,52 +320,62 @@ a {
 }
 .categories-item h3 {
   color: #fff;
-  font: 24px "Cuprum-Bold";
+  font-size: 24px;
+  font-family: "Cuprum";
+  font-weight: bold;
   line-height: 21px;
   text-transform: capitalize;
   margin-bottom: 16px;
+}
+.categories-item a {
+  display: inline-flex;
+  width: 135px;
+  background-color: rgba(255,255,255,0.1);
+  padding: 14px 0;
+  justify-content: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  line-height: 10px;
+}
+.categories-item a:hover {
+  background-color: rgba(255,255,255,0.2);
+}
+.categories-item a:active {
+  background-color: rgba(255,255,255,0.3);
 }
 .material,
 .tool {
   display: inline-block;
   vertical-align: top;
 }
-.categories-item-link {
-  width: 135px;
-  background-color: rgba(255,255,255,0.1);
-  padding: 14px 0;
-  text-align: center;
-  text-transform: uppercase;
-  text-decoration: none;
-  line-height: 10px;
-}
-.categories-item-link:hover {
-  background-color: rgba(255,255,255,0.2);
-}
-.categories-item-link:active {
-  background-color: rgba(255,255,255,0.3);
-}
 .material {
   background: url("../img/icon-1.svg") no-repeat #ffbf47;
+  background-position: right 43px bottom 27px;
 }
 .tool {
   background: url("../img/icon-2.svg") no-repeat #3bbce3;
+  background-position: right 28px bottom 29px;
 }
 .technic {
   background: url("../img/icon-3.svg") no-repeat #dc91d8;
+  background-position: right 31px bottom 30px;
 }
 .sale {
   background: url("../img/icon-4.svg") no-repeat #8ed78f;
+  background-position: right 45px bottom 25px;
 }
 .delivery {
   background: url("../img/icon-5.svg") no-repeat #ffc047;
+  background-position: right 31px bottom 28px;
 }
 .slider {
   width: 620px;
 }
 .slider-item h3 {
   color: #fff;
-  font: 36px "Cuprum-Bold";
+  font-size: 36px;
+  font-family: "Cuprum";
+  font-weight: bold;
   line-height: 36px;
   text-transform: uppercase;
 }
@@ -387,7 +405,8 @@ a {
   list-style: none;
 }
 .breadcrumbs-item a {
-  font: 13px "pt-sans";
+  font-size: 13px;
+  font-family: "PT-Sans";
   color: #000;
   text-transform: uppercase;
 }
@@ -410,12 +429,15 @@ a {
   text-transform: uppercase;
 }
 .aside {
-  font: 17px "pt-sans-bold";
+  font-size: 17px;
+  font-family: "PT-Sans";
+  font-weight: bold;
   line-height: 30px;
   text-transform: uppercase;
 }
 .aside button {
-  font: 13px "pt-sans";
+  font-size: 13px;
+  font-family: "PT-Sans";
   border: 1px solid #e5e5e5;
   background-color: #fff;
 }
@@ -427,23 +449,28 @@ a {
   border-bottom: 1px solid;
 }
 .filter {
-  font: 13px "pt-sans";
+  font-size: 13px;
+  font-family: "PT-Sans";
   background-color: #f7f3ec;
 }
 .choose-price {
-  font: 17px "pt-sans";
+  font-size: 17px;
+  font-family: "PT-Sans";
 }
 .choose-price input {
   background-color: #f7f3ec;
 }
 .choose-filter label {
-  font: 15px "pt-sans";
+  font-size: 15px;
+  font-family: "PT-Sans";
   line-height: 20px;
 }
 .sort {
   background-color: #f7f3ec;
-  font: 13px "pt-sans";
+  font-size: 13px;
+  font-family: "PT-Sans";
   text-transform: uppercase;
+  width: 100%;
 }
 .sort-list,
 .arrows {
@@ -455,7 +482,8 @@ a {
   vertical-align: top;
   opacity: 0.3;
   color: #000;
-  font: 13px "pt-sans";
+  font-size: 13px;
+  font-family: "PT-Sans";
   text-decoration: underline #ee3643;
 }
 .sort-list a:hover,
@@ -494,7 +522,7 @@ a {
 }
 .popular-header .popular-title {
   margin: 0 auto;
-  padding: 33px 363px 0 35px;
+  padding: 33px 349px 0 35px;
   color: #32425c;
   font-size: 30px;
   line-height: 30px;
@@ -508,27 +536,40 @@ a {
   display: inline-block;
 }
 .popular-header .second-title {
-  padding: 33px 266px 30px 30px;
+  padding: 33px 245px 30px 30px;
 }
 .popular-header .second-btn {
   padding: 13px 69px;
 }
 .goods {
   display: flex;
+  flex-wrap: wrap;
   margin-bottom: 20px;
 }
 .goods-item {
-  display: flex;
-  flex-direction: column;
+  width: 220px;
   margin: 0 auto;
-  font: 17px "pt-sans-bold";
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  font-size: 17px;
+  font-family: "PT-Sans";
+  font-weight: bold;
   line-height: 18px;
 }
 .goods-item:hover {
   box-shadow: 0 10px 25px rgba(41,52,73,0.5);
 }
 .goods-item:hover > .hidden {
-  display: block;
+  display: flex;
+  flex-direction: column;
+}
+.goods-item:hover > .hidden a,
+.goods-item:hover > .hidden button {
+  width: 135px;
+  margin-bottom: 7px;
+  padding: 14px 0;
+  text-align: center;
 }
 .goods-item .title,
 .goods-item .old-price,
@@ -557,10 +598,14 @@ a {
   margin-top: 31px;
 }
 .hidden {
+  position: absolute;
+  padding: 44px 41px 31px;
   display: none;
-  font: 14px "Cuprum";
+  font-size: 14px;
+  font-family: "Cuprum";
   line-height: 18px;
   text-transform: uppercase;
+  background-color: #fff;
 }
 .hidden a {
   box-shadow: inset 0 -3px 0 #367315;
@@ -634,7 +679,8 @@ a {
 }
 .service {
   background-color: #f5f8fa;
-  font: 14px "pt-sans";
+  font-size: 14px;
+  font-family: "PT-Sans";
   line-height: 24px;
 }
 .service-title {
@@ -644,7 +690,8 @@ a {
 }
 .service-title h3 {
   margin: 0 auto 35px;
-  font: 30px "Cuprum";
+  font-size: 30px;
+  font-family: "Cuprum";
   line-height: 30px;
   text-transform: uppercase;
 }
@@ -654,9 +701,8 @@ a {
 .service-tab-nav {
   padding: 47px 0;
   list-style: none;
-  margin: 0 80px 0 0;
+  margin: 0 80px 99px 0;
   width: 240px;
-  border-right: 10px solid rgba(255,255,255,0.25);
 }
 .service-tab-nav li {
   box-shadow: 0 1px 0 #293449, inset 0 1px 0 #405069;
@@ -673,19 +719,41 @@ a {
 .service-tab-nav a:active {
   color: #32425c;
 }
-.service-tab-nav .service-tab-item {
+.service-tab-nav .service-nav-item {
   padding: 21px 0 20px 22px;
-  font: 21px "Cuprum-Bold";
+  font-size: 21px;
+  font-family: "Cuprum";
+  font-weight: bold;
   line-height: 30px;
+}
+.service-tab-nav:after {
+  position: absolute;
+  content: '';
+  display: block;
+  right: 0;
+  width: 10px;
+  height: 279px;
+  opacity: 0.25;
+  background-color: rgba(255,255,255,0.3);
 }
 .service-tab-content {
   padding-top: 48px;
+  width: 620px;
+  display: flex;
+  flex-direction: column;
 }
 .service-tab-content h3 {
-  font: 36px "Cuprum";
+  font-size: 36px;
+  font-family: "Cuprum";
   line-height: 36px;
   text-transform: uppercase;
   margin-bottom: 33px;
+}
+.service-tab-item {
+  display: none;
+}
+.active {
+  display: block;
 }
 .text-delivery,
 .text-guarantee,
@@ -700,22 +768,25 @@ a {
 }
 .text-credit {
   width: 279px;
+  margin-bottom: 31px;
 }
 .service-tab-delivery {
   background: url("../img/Layer_131.png") no-repeat;
-  width: 468px;
   height: 261px;
-  margin-top: 21px;
+  background-position: top 21px right 1px;
 }
 .service-tab-guarantee {
   background: url("../img/Layer_130.png") no-repeat;
-  width: 389px;
   height: 283px;
+  background-position: top 1px right 1px;
 }
 .service-tab-credit {
   background: url("../img/Layer_119.png") no-repeat;
-  width: 465px;
   height: 285px;
+  background-position: top 1px right 1px;
+}
+.service-tab-credit .btn {
+  padding: 14px 44px;
 }
 .about {
   margin: 82px 0 86px;
@@ -727,7 +798,8 @@ a {
   margin: 0 0 35px;
 }
 .about .text {
-  font: 13px "pt-sans";
+  font-size: 13px;
+  font-family: "PT-Sans";
   line-height: 24px;
   margin-bottom: 35px;
   width: 519px;
@@ -757,13 +829,16 @@ a {
   padding-left: 0;
   position: relative;
 }
-.partners .partner {
+.partners .partners-item {
   margin-bottom: 17px;
+  position: relative;
+  padding-left: 35px;
 }
-.partners .partner:before {
+.partners .partners-item:before {
   content: "";
   position: absolute;
   left: 0;
+  top: 10px;
   width: 25px;
   height: 2px;
   background-color: #ee3643;
@@ -783,7 +858,8 @@ a {
 }
 /* catalog styles start */
 .pager {
-  font: 13px "pt-sans";
+  font-size: 13px;
+  font-family: "PT-Sans";
   line-height: 18px;
   color: #fff;
 }
@@ -795,7 +871,8 @@ a {
   background-color: #fff;
 }
 .pager-item a {
-  font: 13px "PT Sans";
+  font-size: 13px;
+  font-family: "PT-Sans";
   color: #000;
   text-transform: uppercase;
 }
@@ -818,7 +895,8 @@ a {
   text-transform: uppercase;
 }
 .about-puncher p {
-  font: 13px "pt-sans";
+  font-size: 13px;
+  font-family: "PT-Sans";
   line-height: 24px;
 }
 /* catalog styles end */
@@ -1014,7 +1092,8 @@ a {
 .half-width input,
 .full-width input {
   border: 2px solid #dee3e4;
-  font: 13px "pt-sans";
+  font-size: 13px;
+  font-family: "PT-Sans";
 }
 .form-button {
   padding: 37px 80px;
@@ -1023,9 +1102,6 @@ a {
 .form-button .btn {
   padding: 14px 198px;
   color: #fff;
-}
-.close {
-  float: right;
 }
 /* send form end */
 /* cart popup start */
@@ -1049,8 +1125,11 @@ a {
   height: 66px;
 }
 .close {
-  background: url("../img/icon-close.svg");
-  width: 21px;
-  height: 21px;
+  background: url("../img/icon-close.svg") no-repeat;
+  padding: 20px;
+  background-position: center;
+  border: none;
+  position: absolute;
+  right: 60px;
 }
 /* cart popup end */
