--- a/index.pug
+++ b/index.pug
@@ -14,8 +14,10 @@ html(lang="ru")
               img(src="img/logo-technomart.svg" alt="logo")
           .search
             form(action="search.html" method="get")
-              label.search-icon(for="search")
               input(type="text" id="search" placeholder="Поиск:")
+              label.search-icon(for="search")
+                svg(xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17")
+                  path(fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z")
           .bookmarks
             .bookmark-icon
             a(href="") закладки:
@@ -63,12 +65,10 @@ html(lang="ru")
           .left-column
             .categories-item.material
               h3 материалы
-              .categories-item-link
-                a(href="") на любой вкус
+              a(href="") на любой вкус
             .categories-item.tool
               h3 инструмент
-              .categories-item-link
-                a(href="") на все случаи
+              a(href="") на все случаи
             .categories-item.slider
               .slider-item.perf
                 h3 Перфораторы
@@ -86,16 +86,13 @@ html(lang="ru")
           .right-column
             .categories-item.technic
               h3 техника
-              .categories-item-link
-                a(href="") для стройки
+              a(href="") для стройки
             .categories-item.sale
               h3 скидка 50%
-              .categories-item-link
-                a(href="") на 350 товаров
+              a(href="") на 350 товаров
             .categories-item.delivery
               h3 доставка
-              .categories-item-link
-                a(href="") бесплатно
+              a(href="") бесплатно
       section.popular.products
         .container
           header.popular-header
@@ -175,29 +172,26 @@ html(lang="ru")
               p Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
             .service-wrapper
               ul.service-tab-nav
-                li.service-tab-item(data-name="1")
+                li.service-nav-item.active(data-name="1")
                   a(href="") Доставка
-                li.service-tab-item(data-name="2")
+                li.service-nav-item(data-name="2")
                   a(href="") Гарантия
-                li.service-tab-item(data-name="3")
+                li.service-nav-item(data-name="3")
                   a(href="") Кредит
               .service-tab-content
-                .service-tab-item
+                .service-tab-item.service-tab-delivery.active
                   .text-delivery
                     h3 Доставка
                     p Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!
-                  .service-tab-delivery
-                .service-tab-item
+                .service-tab-item.service-tab-guarantee
                   .text-guarantee
                     h3 Гарантия
                     p Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгоранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.
-                  .service-tab-guarantee
-                .service-tab-item
+                .service-tab-item.service-tab-credit
                   .text-credit
                     h3 Кредит
                     p Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.
-                  a(href="") отправить заявку
-                  .service-tab-credit
+                  a.btn(href="") отправить заявку
         .about
           .container
             .company
@@ -205,9 +199,9 @@ html(lang="ru")
               p.text Настоящий мужской шопинг начинается здесь! огромный выбор товаровдля ремонта и строительства не оставит равнодушным любителей сэкономить на гастарбайтерах.
               p.text Мы можемдоставить ваш товар в самые отдельные точки России! Техномарт работает со многими ранспортными компаниями:
               ul.partners
-                li.partner Деловые линии
-                li.partner Автотрейдинг
-                li.partner ЖелДорЭкспедиция
+                li.partners-item Деловые линии
+                li.partners-item Автотрейдинг
+                li.partners-item ЖелДорЭкспедиция
               a.btn(href="about.html") Подробнее о компании
             .contacts
               h2 Контакты
