--- a/catalog.pug
+++ b/catalog.pug
@@ -39,7 +39,7 @@ html(lang="ru")
             a.customer
               svg(xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18")
                 path(fill="#c5c5c5" d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z")
-            p Равшан Джамшутович
+            p.user Равшан Джамшутович
             a.logout(href="")
               svg(xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17")
                 path(fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z")
@@ -77,157 +77,158 @@ html(lang="ru")
           li.breadcrumbs-item
             a.current Перфораторы
         h1.content-title Перфораторы
-        aside.aside
-          p.filter фильтр:
-          form(action="https://echo.htmlacademy.ru/courses" method="get")
-            fieldset.choose-filter-0
-              legend цена:
-              .choose-price
-                label(for="rating")
-                input(id="rate" name="rate" min="0" max="30000" step="500" value="0")
-                input(id="rate" name="rate" min="0" max="30000" step="500" value="30000")
-            fieldset.choose-filter
-              legend Производители:
-              p
-                input.visually-hidden(type="checkbox" name="bosch" id="bosch" checked)
-                label(for="bosch") bosch
-              p
-                input.visually-hidden(type="checkbox" name="interscol" id="interscol")
-                label(for="interscol") интерскол
-              p
-                input.visually-hidden(type="checkbox" name="makita" id="makita" checked)
-                label(for="makita") makita
-              p
-                input.visually-hidden(type="checkbox" name="dewalt" id="dewalt")
-                label(for="dewalt") dewalt
-              p
-                input.visually-hidden(type="checkbox" name="hitachi" id="hitachi")
-                label(for="hitachi") hitachi
-            fieldset.choose-filter
-              legend питание:
-              p
-                input.visually-hidden(type="radio" name="charge" value="accum" id="accum" checked)
-                label(for="accum") аккумуляторные
-              p
-                input.visually-hidden(type="radio" name="charge" value="network" id="network")
-                label(for="network") сетевые
-            button(type="submit") Показать
-        section.goods.catalog
-          .sort
-            p.sort-to сортировка:
-            ul.sort-list
-              li.sort-to-price
-                a.active(href="") по цене
-              li.sort-to-type
-                a(href="") по типу
-              li.sort-to-functional
-                a(href="") по функионалу
-            ul.arrows
-              li.arrow-item
-                a.arrow.active(href="" aria-label="up")
-                  svg(xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10")
-                    path(fill="#231F20" d="M5.5 0L0 10h11z")
-              li.arrow-item
-                a.arrow(href="" aria-label="down")
-                  svg(xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10")
+        .catalog-filter
+          aside.aside
+            p.filter фильтр:
+            form(action="https://echo.htmlacademy.ru/courses" method="get")
+              fieldset.choose-filter-0
+                legend цена:
+                .choose-price
+                  label(for="rating")
+                  input(id="rate" name="rate" min="0" max="30000" step="500" value="0")
+                  input(id="rate" name="rate" min="0" max="30000" step="500" value="30000")
+              fieldset.choose-filter
+                legend Производители:
+                p
+                  input.visually-hidden(type="checkbox" name="bosch" id="bosch" checked)
+                  label(for="bosch") bosch
+                p
+                  input.visually-hidden(type="checkbox" name="interscol" id="interscol")
+                  label(for="interscol") интерскол
+                p
+                  input.visually-hidden(type="checkbox" name="makita" id="makita" checked)
+                  label(for="makita") makita
+                p
+                  input.visually-hidden(type="checkbox" name="dewalt" id="dewalt")
+                  label(for="dewalt") dewalt
+                p
+                  input.visually-hidden(type="checkbox" name="hitachi" id="hitachi")
+                  label(for="hitachi") hitachi
+              fieldset.choose-filter
+                legend питание:
+                p
+                  input.visually-hidden(type="radio" name="charge" value="accum" id="accum" checked)
+                  label(for="accum") аккумуляторные
+                p
+                  input.visually-hidden(type="radio" name="charge" value="network" id="network")
+                  label(for="network") сетевые
+              button(type="submit") Показать
+          section.catalog
+            .sort
+              p.sort-to сортировка:
+              ul.sort-list
+                li.sort-to-price
+                  a.active(href="") по цене
+                li.sort-to-type
+                  a(href="") по типу
+                li.sort-to-functional
+                  a(href="") по функионалу
+              ul.arrows
+                li.arrow-item
+                  a.arrow.active(href="" aria-label="up")
+                    svg(xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10")
+                      path(fill="#231F20" d="M5.5 0L0 10h11z")
+                li.arrow-item
+                  a.arrow(href="" aria-label="down")
+                    svg(xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10")
                     path(fill="#231F20" d="M5.5 10L0 0h11")
-          .goods-item
-            a(href="")
-              img(src="img/Perforator_3000.jpg", alt="Perforator_3000")
-            .hidden
-              a(href="") купить
-              button(type="submit") в закладки
-            h3.title Перфоратор BOSCH BFG 3000
-            s.old-price 22500 Р.
-            p.price 15500 Р.
-          .goods-item
-            a(href="")
-              img(src="img/Perforator_6000.jpg", alt="Perforator_6000")
-            .hidden
-              a(href="") купить
-              button(type="submit") в закладки
-            h3.title Перфоратор BOSCH BFG 6000
-            s.old-price 30500 Р.
-            p.price 25500 Р.
-          .goods-item
-            a(href="")
-              img(src="img/Perforator_2000.jpg", alt="Perforator_2000")
-            .hidden
-              a(href="") купить
-              button(type="submit") в закладки
-            h3.title Перфоратор BOSCH BFG 2000
-            p.price 12500 Р.
-          .goods-item
-            a(href="")
-              img(src="img/Perforator_3000.jpg", alt="Perforator_3000")
-            .hidden
-              a(href="") купить
-              button(type="submit") в закладки
-            h3.title Перфоратор BOSCH BFG 3000
-            s.old-price 22500 Р.
-            p.price 15500 Р.
-          .goods-item
-            a(href="")
-              img(src="img/Perforator_6000.jpg", alt="Perforator_6000")
-            .hidden
-              a(href="") купить
-              button(type="submit") в закладки
-            h3.title Перфоратор BOSCH BFG 6000
-            s.old-price 30500 Р.
-            p.price 25500 Р.
-          .goods-item
-            a(href="")
-              img(src="img/Perforator_2000.jpg", alt="Perforator_2000")
-            .hidden
-              a(href="") купить
-              button(type="submit") в закладки
-            h3.title Перфоратор BOSCH BFG 2000
-            p.price 12500 Р.
-          .goods-item
-            a(href="")
-              img(src="img/Perforator_3000.jpg", alt="Perforator_3000")
-            .hidden
-              a(href="") купить
-              button(type="submit") в закладки
-            h3.title Перфоратор BOSCH BFG 3000
-            s.old-price 22500 Р.
-            p.price 15500 Р.
-          .goods-item
-            a(href="")
-              img(src="img/Perforator_6000.jpg", alt="Perforator_6000")
-            .hidden
-              a(href="") купить
-              button(type="submit") в закладки
-            h3.title Перфоратор BOSCH BFG 6000
-            s.old-price 30500 Р.
-            p.price 25500 Р.
-          .goods-item
-            a(href="")
-              img(src="img/Perforator_2000.jpg", alt="Perforator_2000")
-            .hidden
-              a(href="") купить
-              button(type="submit") в закладки
-            h3.title Перфоратор BOSCH BFG 2000
-            p.price 12500 Р.
-          .pager
-            ul.pager-list
-              li.pager-item
-                a.current 1
-              li.pager-item
-                a(href="") 2
-              li.pager-item
-                a(href="") 3
-              li.pager-item
-                a(href="") Следующая
-        .about-puncher
+            .goods-item
+              a(href="")
+                img(src="img/Perforator_3000.jpg", alt="Perforator_3000")
+              .hidden
+                a(href="") купить
+                button(type="submit") в закладки
+              h3.title Перфоратор BOSCH BFG 3000
+              s.old-price 22500 Р.
+              p.price 15500 Р.
+            .goods-item
+              a(href="")
+                img(src="img/Perforator_6000.jpg", alt="Perforator_6000")
+              .hidden
+                a(href="") купить
+                button(type="submit") в закладки
+              h3.title Перфоратор BOSCH BFG 6000
+              s.old-price 30500 Р.
+              p.price 25500 Р.
+            .goods-item
+              a(href="")
+                img(src="img/Perforator_2000.jpg", alt="Perforator_2000")
+              .hidden
+                a(href="") купить
+                button(type="submit") в закладки
+              h3.title Перфоратор BOSCH BFG 2000
+              p.price 12500 Р.
+            .goods-item
+              a(href="")
+                img(src="img/Perforator_3000.jpg", alt="Perforator_3000")
+              .hidden
+                a(href="") купить
+                button(type="submit") в закладки
+              h3.title Перфоратор BOSCH BFG 3000
+              s.old-price 22500 Р.
+              p.price 15500 Р.
+            .goods-item
+              a(href="")
+                img(src="img/Perforator_6000.jpg", alt="Perforator_6000")
+              .hidden
+                a(href="") купить
+                button(type="submit") в закладки
+              h3.title Перфоратор BOSCH BFG 6000
+              s.old-price 30500 Р.
+              p.price 25500 Р.
+            .goods-item
+              a(href="")
+                img(src="img/Perforator_2000.jpg", alt="Perforator_2000")
+              .hidden
+                a(href="") купить
+                button(type="submit") в закладки
+              h3.title Перфоратор BOSCH BFG 2000
+              p.price 12500 Р.
+            .goods-item
+              a(href="")
+                img(src="img/Perforator_3000.jpg", alt="Perforator_3000")
+              .hidden
+                a(href="") купить
+                button(type="submit") в закладки
+              h3.title Перфоратор BOSCH BFG 3000
+              s.old-price 22500 Р.
+              p.price 15500 Р.
+            .goods-item
+              a(href="")
+                img(src="img/Perforator_6000.jpg", alt="Perforator_6000")
+              .hidden
+                a(href="") купить
+                button(type="submit") в закладки
+              h3.title Перфоратор BOSCH BFG 6000
+              s.old-price 30500 Р.
+              p.price 25500 Р.
+            .goods-item
+              a(href="")
+                img(src="img/Perforator_2000.jpg", alt="Perforator_2000")
+              .hidden
+                a(href="") купить
+                button(type="submit") в закладки
+              h3.title Перфоратор BOSCH BFG 2000
+              p.price 12500 Р.
+            .pager
+              ul.pager-list
+                li.pager-item
+                  a.current 1
+                li.pager-item
+                  a(href="") 2
+                li.pager-item
+                  a(href="") 3
+                li.pager-item
+                  a(href="") Следующая
+      .about-puncher
+        .container
           h3 пара слов о перфораторах
           p Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
     footer.page-footer
       .footer-top-row
         .container
-          .logo-bottom
-            a(href="index.html" alt="logo" aria-label="main-page")
-              img(src="img/logo-technomart.svg", alt="logo")
+          a.logo-bottom(href="index.html" alt="logo" aria-label="main-page")
+            img(src="img/logo-technomart.svg", alt="logo")
           ul.footer-nav
             li.footer-nav-item
               a(href="") Компания
@@ -267,8 +268,9 @@ html(lang="ru")
             p.developed Разработано
               a(href="https://htmlacademy.ru/intensive/htmlcss" target="_blank") htmlacademy.ru
     .cart-popup
-      .icon-mark
-      p Товар добавлен в корзину!
+      .popup-message
+        .icon-mark
+        p.cart-popup-text Товар добавлен в корзину!
       .close
       .order-buy
         a.btn(href="") оформить заказ
